--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-	<title></title>
+	<title>Aprendiendo GIT</title>
 	<meta name="description" content="" />
   	<meta name="keywords" content="" />
 	<meta name="robots" content="" />
 	
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="estilos.css">
 	<script type="text/javascript" src=""></script>
 	
 </head>
 
 <body>
-	<h1></h1>
+	<h1>GIT desde CERO</h1>
 	
 </body>
 </html>
