segundo parrafo master

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<h1>GIT desde CERO</h1>
 	<p>Hola a todos</p>
 	<p>Otro parrafo con texto</p>
+	<p>Parrafo agregado en la rama master</p>
 </body>
 </html>
